# NaShell

./: Cargo.toml  README.md  README_CN.md  bugs.md  flake.nix  test_config.kdl  test_interact.py
docs/: INSTRUCTION.md  nashell_dev.md  phases.md  plugin_dev.md
src/: constants.rs  main.rs
src/app/: init.rs  mod.rs
src/config/: alias.rs  loader.rs  mod.rs  schema.rs
src/error/: display.rs  mod.rs
src/executor/: async_exec.rs  mod.rs  shell_exec.rs
src/nacommand/: cmd.rs  external.rs  mod.rs  registry.rs
src/nacommand/builtin/: bash.rs  mod.rs  na_cmds.rs  open.rs  open_tests.rs  read.rs  read_tests.rs  shell_cmd.rs  shell_cmd_tests.rs  write.rs
src/parser/: lexer.rs  long_arg.rs  mod.rs  pipeline.rs  syntax.rs
src/plugin/: broadcast.rs  manager.rs  manifest.rs  mod.rs  protocol.rs  toexec.rs
src/repl/: input.rs  mod.rs  prompt.rs  signals.rs
src/shell/: actor.rs  cmd.rs  cwd_sync.rs  manager.rs  manager_tests.rs  mod.rs  out.rs  pty.rs
test_plugins/demo_plugin/: manifest.json  plugin.py
