[package]
name = "nashell"
version = "0.1.0"
edition = "2021"

[dependencies]
kdl = { version = "6", features = ["span"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
tokio = { version = "1", features = ["full"] }
rustyline = "15"
portable-pty = "0.8"
libc = "0.2.186"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
